--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 requests==2.28.1
 pyodbc==4.0.39
+beautifulsoup4==4.11.1
+beautifulsoup4==4.11.1
+certifi==2023.7.22
+charset-normalizer==2.1.1
+idna==3.4
+lxml==4.9.3
+soupsieve==2.4.1
+urllib3==1.26.16
