--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,10 @@
 		"context": "..",
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile"
-	}
+	},
+	"runArgs": [
+		"--network=host"
+	]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
