--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ urllib3==1.26.16
 selenium==4.15.2
 webdriver-manager==4.0.0
 markdown2==2.4.10
+pandas==2.3.3
+SQLAlchemy>=2.0
+tabulate==0.9.0
+premailer==3.10.0
